# oins

./: README.md
bag/: 2023-05-15-16-07-55.bag
oins/: ins_ros.rviz
oins/src/bw_ros_serial/: CMakeLists.txt
oins/src/bw_ros_serial/ads_include/AdsLib/: Sockets.h
oins/src/bw_ros_serial/ahrs_include/madgwick/: ahrs_madgwick.h
oins/src/bw_ros_serial/ahrs_include/mahony/: mahonyAHRS.cpp
oins/src/bw_ros_serial/launch/: fusion.launch  serial.launch
oins/src/bw_ros_serial/src/: fusion_v1.cpp  fusion_v2.cpp  fusion_v3.cpp  move_test.cpp
oins/src/motor_ros_serial/launch/: serial.launch
oins_230725/src/bw_ros_serial/: CMakeLists.txt  package.xml
oins_230725/src/bw_ros_serial/launch/: comparsion.launch  ins_ros.launch
oins_230725/src/bw_ros_serial/src/: comparsion.cpp  fusion.cpp  fusion_main.cpp
oins_230725/src/ekf_fusion/launch/: ekf_template.launch
oins_230725/src/ekf_fusion/param/: ekf_template.yaml
oins_230725/src/motor_ros_serial/: package.xml
src/bw_ros_serial/: CMakeLists.txt
src/bw_ros_serial/ads_include/AdsLib/: Sockets.cpp
src/bw_ros_serial/ads_include/AdsLib/TwinCAT/: AdsDef.h
src/bw_ros_serial/data/230614/: record_4.csv
src/bw_ros_serial/data/230620/: record.ods
src/bw_ros_serial/data/230625/: record_1.ods
src/bw_ros_serial/data/230704/: data_ana.m  record_1.csv  record_2.csv  惯性导航.md  惯性导航v1_0.md
src/bw_ros_serial/launch/: comparsion.launch
src/bw_ros_serial/src/: bw_serial.cpp  bw_serial_at.cpp  fusion.cpp  ins_ros.cpp  test.cpp
src/ekf_fusion/launch/: ekf_template.launch
src/ekf_fusion/param/: ekf_template.yaml
src/motor_ros_serial/: CMakeLists.txt  package.xml
src/motor_ros_serial/data/: record.csv
src/motor_ros_serial/launch/: serial.launch
src/motor_ros_serial/src/: motor_serial.cpp
(+89 files in other folders)
